Update title for hotel website

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grand Haven Hotel - Luxury Accommodation & Fine Dining</title>
+    <title>GIBORN MODERN DAY HOTEL AND ROOM SERVICE</title>
     <meta name="description" content="Experience luxury at Grand Haven Hotel. Book elegant rooms, enjoy fine dining, and discover exceptional hospitality in the heart of the city." />
     <meta name="author" content="Grand Haven Hotel" />
 
